--- a/app/src/main/res/values-w820dp/index1.1.html
+++ b/app/src/main/res/values-w820dp/index1.1.html
@@ -33,7 +33,7 @@
                     return false;
             }
 
-            function chkDigit(input) {
+            function chkQuantity(input) {
                 if (!(input.value)){
                    alert("Fruit quantity "+ input.id + " cannot be empty.");
                    setTimeout(function(){input.focus();}, 1);
@@ -108,19 +108,19 @@
                     <th> Apple </th>
                     <td> 69 cents </td>
                     <td> <input type = "text"  id = "apple"  name = "appleQuantity"
-                                size ="2" onchange = "chkDigit(this)" onblur = "chkDigit(this)" /> </td>
+                                size ="2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)" /> </td>
                 </tr>
                 <tr>
                     <th> Orange </th>
                     <td> 59 cents </td>
                     <td> <input type = "text"  id = "orange" name = "orangeQuantity"
-                                size = "2" onchange = "chkDigit(this)" onblur = "chkDigit(this)"/> </td>
+                                size = "2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)"/> </td>
                 </tr>
                 <tr>
                     <th> Banana </th>
                     <td> 39 cents </td>
                     <td> <input type = "text"  id = "banana" name = "bananaQuantity"
-                                size = "2" onchange = "chkDigit(this)" onblur = "chkDigit(this)"/> </td>
+                                size = "2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)"/> </td>
                 </tr>
             </table>
 
