--- a/app/src/main/res/values-w820dp/index1.1.html
+++ b/app/src/main/res/values-w820dp/index1.1.html
@@ -46,6 +46,7 @@
                     setTimeout(function(){input.focus();}, 1);
                     return false;
                 }
+                return true;
             }
 
             function chkName(input) {
@@ -58,7 +59,10 @@
                      + "e.g. Li Sophia, Li Sophia Shan");
                     return false;
                 }
+                return true;
             }
+
+
 
 // The event handler for a radio button collection
             function paymentChoice (payment) {
@@ -72,10 +76,10 @@
                 var banana = document.getElementById("banana");
                 var name = document.getElementById("name");
 
+                if (!chkName(name)) return false;
                 if (!chkQuantity(apple)) return false;
                 if (!chkQuantity(orange)) return false;
                 if (!chkQuantity(banana)) return false;
-                if (!chkName(name)) return false;
 
                 if ((!document.getElementById("Visa").checked)&&(!document.getElementById("MasterCard").checked)&&(!document.getElementById("Discover").checked)){
                     alert("Please select a payment method!");
