- update php name

--- a/app/src/main/res/values-w820dp/index1.1.html
+++ b/app/src/main/res/values-w820dp/index1.1.html
@@ -109,7 +109,7 @@
     </head>
 
     <body>
-        <form action = "receiptOrder.php" method = "post">
+        <form action = "orderReceipt.php" method = "post">
             <h3> Fruit Order Form </h3>
 
             <h4> Your name: <input type = "text"  id = "name"  name = "userName"
