--- a/app/src/main/res/values-w820dp/fruitShopMainIndex.html
+++ b/app/src/main/res/values-w820dp/fruitShopMainIndex.html
@@ -131,19 +131,19 @@
                     <th> Apple </th>
                     <td> 69 cents </td>
                     <td> <input type = "text"  id = "apple"  name = "appleQuantity"
-                                size ="2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)" /> </td>
+                                size ="2" onchange = "chkQuantity(this)" /> </td>
                 </tr>
                 <tr>
                     <th> Orange </th>
                     <td> 59 cents </td>
                     <td> <input type = "text"  id = "orange" name = "orangeQuantity"
-                                size = "2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)"/> </td>
+                                size = "2" onchange = "chkQuantity(this)" /> </td>
                 </tr>
                 <tr>
                     <th> Banana </th>
                     <td> 39 cents </td>
                     <td> <input type = "text"  id = "banana" name = "bananaQuantity"
-                                size = "2" onchange = "chkQuantity(this)" onblur = "chkQuantity(this)"/> </td>
+                                size = "2" onchange = "chkQuantity(this)" /> </td>
                 </tr>
             </table>
 
